# MyLivePusher

./: settings.gradle
app/: CMakeLists.txt  armeabi-v7a.bat  build.gradle
app/src/androidTest/java/com/hong/mylivepusher/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: HQueue.cpp  HQueue.h  RecordBuffer.cpp  RecordBuffer.h  RtmpPush.cpp  RtmpPush.h  hpush.cpp
app/src/main/java/com/hong/mylivepusher/: CameraActivity.java  ImageVideoActivity.java  LivePushActivity.java  MainActivity.java  VideoActivity.java  YuvActivity.java
app/src/main/java/com/hong/mylivepusher/camera/: HCamera.java  HCameraFboRender.java  HCameraRender.java  HCameraView.java
app/src/main/java/com/hong/mylivepusher/egl/: EglHelper.java  HEGLSurfaceView.java  HShaderUtil.java
app/src/main/java/com/hong/mylivepusher/encodec/: HBaseMediaEncoder.java  HEncodecRender.java  HMediaEncodec.java
app/src/main/java/com/hong/mylivepusher/imgvideo/: HImgFboRender.java  HImgVideoRender.java  HImgVideoView.java
app/src/main/java/com/hong/mylivepusher/push/: HPushVideo.java
app/src/main/java/com/hong/mylivepusher/util/: AudioRecordUitl.java  DisplayUtil.java  TextureUtil.java  WatermarkUtil.java
app/src/main/java/com/hong/mylivepusher/yuv/: HYuvFboRender.java  HYuvRender.java  HYuvView.java
app/src/main/res/layout/: activity_camera.xml  activity_image_video.xml  activity_live_push.xml  activity_main.xml  activity_video.xml  activity_yuv.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/hong/mylivepusher/: ExampleUnitTest.java
(+43 files in other folders)
